--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,41 +11,20 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  vmImageName: 'ubuntu-latest'
-
-  azureServiceConnection: '<your-connection-name>'
-  # resourceGroupName: 'exampleRG'
-  # location: '<your-resource-group-location>'
-  templateFile: './AzureAKS/main.bicep'
+  resourceGroup: 'bicep-rg'
 
 steps:
-- task: AzureCLI@2
-  displayName: Login to Azure CLI
-  inputs:
-    azureSubscription: 'MSDN(031e997d-b908-4dd0-9dba-c440758aec29)'
-    scriptType: 'pscore'
-    scriptLocation: 'inlineScript'
-    inlineScript: |
-      az login -u dami.olayokun@etalopo.com -p P@ssw0rd+1001
-      az account set --subscription '031e997d-b908-4dd0-9dba-c440758aec29'
 
 - task: AzureResourceManagerTemplateDeployment@3
+  displayName: Deploy
   inputs:
     deploymentScope: 'Resource Group'
     azureResourceManagerConnection: 'iac-aad-deploy-dev'
     subscriptionId: '031e997d-b908-4dd0-9dba-c440758aec29'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: 'bicep-rg'
+    resourceGroupName: $(resourceGroup)
     location: 'UK South'
     templateLocation: 'Linked artifact'
-    deploymentMode: 'Incremental'
-
-- task: AzureCLI@2
-  inputs:
-    azureSubscription: 'iac-aad-deploy-dev'
-    scriptType: 'bash'
-    scriptLocation: 'inlineScript'
-    inlineScript: |
-      az --version 
-      az group create --name $(resourceGroupName) --location $(location)
-      az deployment group create --resource-group $(resourceGroupName) --template-file $(templateFile)
+    csmFile: './ResourceGroups/main.bicep'
+    csmParametersFile: './ResourceGroups/main.parameters.json'
+    deploymentMode: 'Validation'
