--- a/azbicep-aks-deploy-pipeline.yml
+++ b/azbicep-aks-deploy-pipeline.yml
@@ -29,4 +29,4 @@ jobs:
           templateLocation: 'Linked artifact'
           csmFile: './AzureAKS/main.bicep'
           csmParametersFile: './AzureAKS/main.parameters.json'
-          deploymentMode: 'Validation'
+          deploymentMode: 'Incremental'
